--- a/packages/testbed/src/app/pages/volumebus/volumebus.component.html
+++ b/packages/testbed/src/app/pages/volumebus/volumebus.component.html
@@ -1,6 +1,7 @@
-<div *ngFor="let c of channels" class="mb-5">
+@for (c of channels; track c) {
+<div class="mb-5">
   <h2>{{ c.label }}</h2>
   <sui-fader-level [channel]="c.channel" />
-
   <sui-transition class="d-block mt-3" [channel]="c.channel" />
 </div>
+}
