--- a/packages/testbed/src/app/ui/fader-level/fader-level.component.html
+++ b/packages/testbed/src/app/ui/fader-level/fader-level.component.html
@@ -1,22 +1,16 @@
-<ng-container *ngIf="channel">
-  <label>Fader Level</label>
-  <input
-    type="range"
-    min="0"
-    max="1"
-    step="0.00000000001"
-    (input)="setFaderLevel(faderLevelInput.value)"
-    [value]="channel.faderLevel$ | async"
-    #faderLevelInput
-  />
-
-  <button class="btn btn-success btn-sm ms-3" (click)="channel.changeFaderLevelDB(3)">
-    + 3 dB
-  </button>
-  <button class="btn btn-success btn-sm ms-3" (click)="channel.changeFaderLevelDB(-3)">
-    – 3 dB
-  </button>
-
-  <span class="ms-3">{{ channel.faderLevelDB$ | async }} dB</span>
-  <span class="ms-3">{{ channel.faderLevel$ | async }}</span>
-</ng-container>
+@if (channel) {
+<label>Fader Level</label>
+<input
+  type="range"
+  min="0"
+  max="1"
+  step="0.00000000001"
+  (input)="setFaderLevel(faderLevelInput.value)"
+  [value]="channel.faderLevel$ | async"
+  #faderLevelInput
+/>
+<button class="btn btn-success btn-sm ms-3" (click)="channel.changeFaderLevelDB(3)">+ 3 dB</button>
+<button class="btn btn-success btn-sm ms-3" (click)="channel.changeFaderLevelDB(-3)">– 3 dB</button>
+<span class="ms-3">{{ channel.faderLevelDB$ | async }} dB</span>
+<span class="ms-3">{{ channel.faderLevel$ | async }}</span>
+}
