--- a/packages/testbed/src/app/pages/automix/automix.component.html
+++ b/packages/testbed/src/app/pages/automix/automix.component.html
@@ -14,17 +14,16 @@
   <span class="ms-3">{{ automix.responseTime$ | async }}</span>
 
   <div>
-    <button
-      *ngFor="let v of [20, 100, 1234, 2400, 3120, 4000]"
-      class="btn btn-success btn-sm me-3"
-      (click)="automix.setResponseTimeMs(v)"
-    >
+    @for (v of [20, 100, 1234, 2400, 3120, 4000]; track v) {
+    <button class="btn btn-success btn-sm me-3" (click)="automix.setResponseTimeMs(v)">
       {{ v }} ms
     </button>
+    }
   </div>
 </div>
 
-<div class="mb-5 mt-5" *ngFor="let g of groups">
+@for (g of groups; track g) {
+<div class="mb-5 mt-5">
   <h2>{{ g.label }}</h2>
   <sui-mixer-button (press)="g.group.enable()">Enable</sui-mixer-button>
   <sui-mixer-button (press)="g.group.disable()">Disable</sui-mixer-button>
@@ -32,8 +31,8 @@
     >Toggle</sui-mixer-button
   >
 </div>
-
-<div *ngFor="let c of channels" class="mb-4">
+} @for (c of channels; track c) {
+<div class="mb-4">
   <h2>{{ c.label }}</h2>
   <sui-mixer-button
     (press)="c.channel.automixAssignGroup('a')"
@@ -51,7 +50,6 @@
     >None</sui-mixer-button
   >
   <button class="btn btn-secondary" (click)="c.channel.automixRemove()">Remove</button>
-
   <div class="mt-2">
     <label class="me-3">Weight</label>
     <input
@@ -63,11 +61,9 @@
       [value]="c.channel.automixWeight$ | async"
       #weightInput
     />
-
     <span class="ms-3">{{ c.channel.automixWeightDB$ | async }} dB</span>
     <span class="ms-3">{{ c.channel.automixWeight$ | async }}</span>
   </div>
-
   <div class="mt-2">
     <h4>Set weight</h4>
     <button class="btn btn-success btn-sm me-3" (click)="c.channel.automixSetWeightDB(-12)">
@@ -86,7 +82,6 @@
       12 dB
     </button>
   </div>
-
   <div class="mt-3">
     <h4>Change weight</h4>
     <button class="btn btn-success btn-sm me-3" (click)="c.channel.automixChangeWeightDB(-1)">
@@ -97,3 +92,4 @@
     </button>
   </div>
 </div>
+}
