--- a/packages/testbed/src/app/pages/fx-bus/fx-bus.component.html
+++ b/packages/testbed/src/app/pages/fx-bus/fx-bus.component.html
@@ -1,11 +1,7 @@
-<ng-container *ngFor="let c of channels$ | async">
-  <h2 class="mt-4">{{ c.label }} ({{ c.channel.name$ | async }})</h2>
-
-  <sui-mute-button [channel]="c.channel" />
-
-  <sui-prepost [channel]="c.channel" />
-
-  <sui-fader-level [channel]="c.channel" />
-
-  <sui-transition [channel]="c.channel" />
-</ng-container>
+@for (c of channels$ | async; track c) {
+<h2 class="mt-4">{{ c.label }} ({{ c.channel.name$ | async }})</h2>
+<sui-mute-button [channel]="c.channel" />
+<sui-prepost [channel]="c.channel" />
+<sui-fader-level [channel]="c.channel" />
+<sui-transition [channel]="c.channel" />
+}
