--- a/packages/testbed/src/app/pages/mute-groups/mute-groups.component.html
+++ b/packages/testbed/src/app/pages/mute-groups/mute-groups.component.html
@@ -2,11 +2,12 @@
   <sui-mixer-button (press)="clearMuteGroups()">Clear Mute groups</sui-mixer-button>
 </div>
 
-<div *ngFor="let g of groups">
+@for (g of groups; track g) {
+<div>
   <sui-mixer-button activeClass="mute" [active]="!!(g.state$ | async)" (press)="g.toggle()">
     Toggle {{ g.id }}
   </sui-mixer-button>
-
   <sui-mixer-button (press)="g.mute()">Mute {{ g.id }}</sui-mixer-button>
   <sui-mixer-button (press)="g.unmute()">Unmute {{ g.id }}</sui-mixer-button>
 </div>
+}
