--- a/packages/testbed/src/app/ui/delay/delay.component.html
+++ b/packages/testbed/src/app/ui/delay/delay.component.html
@@ -1,17 +1,15 @@
-<ng-container *ngIf="channel">
-  <label>Delay (ms)</label>
-  <input
-    type="range"
-    min="0"
-    [max]="maxValue"
-    step="1"
-    (change)="setDelay(delayInput.value)"
-    [value]="channel.delay$ | async"
-    #delayInput
-  />
-
-  <button class="btn btn-success btn-sm ms-3" (click)="changeDelay(50)">+ 50 ms</button>
-  <button class="btn btn-success btn-sm ms-3" (click)="changeDelay(-30)">- 30 ms</button>
-
-  <span class="ms-3">{{ channel.delay$ | async }} ms</span>
-</ng-container>
+@if (channel) {
+<label>Delay (ms)</label>
+<input
+  type="range"
+  min="0"
+  [max]="maxValue"
+  step="1"
+  (change)="setDelay(delayInput.value)"
+  [value]="channel.delay$ | async"
+  #delayInput
+/>
+<button class="btn btn-success btn-sm ms-3" (click)="changeDelay(50)">+ 50 ms</button>
+<button class="btn btn-success btn-sm ms-3" (click)="changeDelay(-30)">- 30 ms</button>
+<span class="ms-3">{{ channel.delay$ | async }} ms</span>
+}
