--- a/packages/testbed/src/app/ui/mute-button/mute-button.component.html
+++ b/packages/testbed/src/app/ui/mute-button/mute-button.component.html
@@ -1,12 +1,11 @@
-<ng-container *ngIf="channel">
-  <sui-mixer-button
-    activeClass="mute"
-    [active]="!!(channel.mute$ | async)"
-    (press)="channel.toggleMute()"
-  >
-    Mute toggle {{ label }}
-  </sui-mixer-button>
-
-  <sui-mixer-button (press)="channel.mute()">Mute {{ label }}</sui-mixer-button>
-  <sui-mixer-button (press)="channel.unmute()">Unmute {{ label }}</sui-mixer-button>
-</ng-container>
+@if (channel) {
+<sui-mixer-button
+  activeClass="mute"
+  [active]="!!(channel.mute$ | async)"
+  (press)="channel.toggleMute()"
+>
+  Mute toggle {{ label }}
+</sui-mixer-button>
+<sui-mixer-button (press)="channel.mute()">Mute {{ label }}</sui-mixer-button>
+<sui-mixer-button (press)="channel.unmute()">Unmute {{ label }}</sui-mixer-button>
+}
