--- a/packages/testbed/src/app/ui/pan/pan.component.html
+++ b/packages/testbed/src/app/ui/pan/pan.component.html
@@ -1,15 +1,14 @@
-<ng-container *ngIf="channel">
-  <label>Pan</label>
-  <input
-    type="range"
-    min="0"
-    max="1"
-    step="0.00001"
-    value="0.5"
-    [value]="channel.pan$ | async"
-    (input)="pan(panInput.value)"
-    #panInput
-  />
-
-  <span class="ms-3">{{ channel.pan$ | async }}</span>
-</ng-container>
+@if (channel) {
+<label>Pan</label>
+<input
+  type="range"
+  min="0"
+  max="1"
+  step="0.00001"
+  value="0.5"
+  [value]="channel.pan$ | async"
+  (input)="pan(panInput.value)"
+  #panInput
+/>
+<span class="ms-3">{{ channel.pan$ | async }}</span>
+}
