--- a/packages/testbed/src/app/ui/solo-button/solo-button.component.html
+++ b/packages/testbed/src/app/ui/solo-button/solo-button.component.html
@@ -1,12 +1,11 @@
-<ng-container *ngIf="channel">
-  <sui-mixer-button
-    activeClass="solo"
-    [active]="!!(channel.solo$ | async)"
-    (press)="channel.toggleSolo()"
-  >
-    Solo toggle {{ label }}
-  </sui-mixer-button>
-
-  <sui-mixer-button (press)="channel.solo()">Solo {{ label }}</sui-mixer-button>
-  <sui-mixer-button (press)="channel.unsolo()">Unsolo {{ label }}</sui-mixer-button>
-</ng-container>
+@if (channel) {
+<sui-mixer-button
+  activeClass="solo"
+  [active]="!!(channel.solo$ | async)"
+  (press)="channel.toggleSolo()"
+>
+  Solo toggle {{ label }}
+</sui-mixer-button>
+<sui-mixer-button (press)="channel.solo()">Solo {{ label }}</sui-mixer-button>
+<sui-mixer-button (press)="channel.unsolo()">Unsolo {{ label }}</sui-mixer-button>
+}
