feat: add start and stop for multi-track recording
These are convenience functions to make things easier from the user perspective. They take the current recording state into account and toggle accordingly.

--- a/packages/testbed/src/app/pages/multitrack/multitrack.component.html
+++ b/packages/testbed/src/app/pages/multitrack/multitrack.component.html
@@ -16,6 +16,8 @@
   <sui-mixer-button (press)="mtk.recordToggle()" [active]="!!(mtk.recording$ | async)">
     REC
   </sui-mixer-button>
+  <sui-mixer-button (press)="mtk.recordStart()">REC Start</sui-mixer-button>
+  <sui-mixer-button (press)="mtk.recordStop()">REC Stop</sui-mixer-button>
 </div>
 
 <div class="mb-3">
