feat(vu): add utility function vuValueToDB() for conversion to dB values

--- a/packages/testbed/src/app/pages/vu/vu.component.html
+++ b/packages/testbed/src/app/pages/vu/vu.component.html
@@ -15,6 +15,8 @@
 
 <hr />
 
+<p><strong>Master Post Fader L:</strong> {{ masterPostFaderLDB$ | async }} dB</p>
+
 @for (c of stereoChannels; track c) {
 <h2 class="mt-4">{{ c.label }}</h2>
 <sui-vu-meter [value]="(c.vuData | async)?.vuPostL" mode="post" label="Post L"></sui-vu-meter>
