refactor(testbed): migrate inputs/outputs to signal functions

--- a/packages/testbed/src/app/ui/delay/delay.component.html
+++ b/packages/testbed/src/app/ui/delay/delay.component.html
@@ -3,13 +3,13 @@
 <input
   type="range"
   min="0"
-  [max]="maxValue"
+  [max]="maxValue()"
   step="1"
   (change)="setDelay(delayInput.value)"
-  [value]="channel.delay$ | async"
+  [value]="channel().delay$ | async"
   #delayInput
 />
 <button class="btn btn-success btn-sm ms-3" (click)="changeDelay(50)">+ 50 ms</button>
 <button class="btn btn-success btn-sm ms-3" (click)="changeDelay(-30)">- 30 ms</button>
-<span class="ms-3">{{ channel.delay$ | async }} ms</span>
+<span class="ms-3">{{ channel().delay$ | async }} ms</span>
 }
