--- a/packages/testbed/src/app/ui/fader-level/fader-level.component.html
+++ b/packages/testbed/src/app/ui/fader-level/fader-level.component.html
@@ -6,11 +6,15 @@
   max="1"
   step="0.00000000001"
   (input)="setFaderLevel(faderLevelInput.value)"
-  [value]="channel.faderLevel$ | async"
+  [value]="channel().faderLevel$ | async"
   #faderLevelInput
 />
-<button class="btn btn-success btn-sm ms-3" (click)="channel.changeFaderLevelDB(3)">+ 3 dB</button>
-<button class="btn btn-success btn-sm ms-3" (click)="channel.changeFaderLevelDB(-3)">– 3 dB</button>
-<span class="ms-3">{{ channel.faderLevelDB$ | async }} dB</span>
-<span class="ms-3">{{ channel.faderLevel$ | async }}</span>
+<button class="btn btn-success btn-sm ms-3" (click)="channel().changeFaderLevelDB(3)">
+  + 3 dB
+</button>
+<button class="btn btn-success btn-sm ms-3" (click)="channel().changeFaderLevelDB(-3)">
+  – 3 dB
+</button>
+<span class="ms-3">{{ channel().faderLevelDB$ | async }} dB</span>
+<span class="ms-3">{{ channel().faderLevel$ | async }}</span>
 }
