--- a/packages/testbed/src/app/ui/input/input.component.html
+++ b/packages/testbed/src/app/ui/input/input.component.html
@@ -1,7 +1,7 @@
-<label>{{ label }}</label>
+<label>{{ label() }}</label>
 <div class="input-group mb-3 w-50">
-  <input type="text" class="form-control" [value]="value" #input />
+  <input type="text" class="form-control" [value]="value()" #input />
   <button class="btn btn-secondary" type="button" (click)="valueChange.emit(input.value)">
-    {{ buttonLabel }}
+    {{ buttonLabel() }}
   </button>
 </div>
