--- a/packages/testbed/src/app/ui/pan/pan.component.html
+++ b/packages/testbed/src/app/ui/pan/pan.component.html
@@ -6,9 +6,9 @@
   max="1"
   step="0.00001"
   value="0.5"
-  [value]="channel.pan$ | async"
+  [value]="channel().pan$ | async"
   (input)="pan(panInput.value)"
   #panInput
 />
-<span class="ms-3">{{ channel.pan$ | async }}</span>
+<span class="ms-3">{{ channel().pan$ | async }}</span>
 }
