--- a/packages/testbed/src/app/ui/prepost/prepost.component.html
+++ b/packages/testbed/src/app/ui/prepost/prepost.component.html
@@ -1,10 +1,10 @@
 @if (channel) {
-<sui-mixer-button (press)="channel.post()"> POST</sui-mixer-button>
-<sui-mixer-button (press)="channel.pre()">PRE</sui-mixer-button>
+<sui-mixer-button (press)="channel().post()"> POST</sui-mixer-button>
+<sui-mixer-button (press)="channel().pre()">PRE</sui-mixer-button>
 <sui-mixer-button
   activeClass="post"
-  [active]="!!(channel.post$ | async)"
-  (press)="channel.togglePost()"
+  [active]="!!(channel().post$ | async)"
+  (press)="channel().togglePost()"
 >
   Toggle PRE/POST
 </sui-mixer-button>
