--- a/packages/testbed/src/app/ui/solo-button/solo-button.component.html
+++ b/packages/testbed/src/app/ui/solo-button/solo-button.component.html
@@ -1,11 +1,11 @@
 @if (channel) {
 <sui-mixer-button
   activeClass="solo"
-  [active]="!!(channel.solo$ | async)"
-  (press)="channel.toggleSolo()"
+  [active]="!!(channel().solo$ | async)"
+  (press)="channel().toggleSolo()"
 >
-  Solo toggle {{ label }}
+  Solo toggle {{ label() }}
 </sui-mixer-button>
-<sui-mixer-button (press)="channel.solo()">Solo {{ label }}</sui-mixer-button>
-<sui-mixer-button (press)="channel.unsolo()">Unsolo {{ label }}</sui-mixer-button>
+<sui-mixer-button (press)="channel().solo()">Solo {{ label() }}</sui-mixer-button>
+<sui-mixer-button (press)="channel().unsolo()">Unsolo {{ label() }}</sui-mixer-button>
 }
