--- a/packages/testbed/src/app/pages/fx-bus/fx-bus.component.html
+++ b/packages/testbed/src/app/pages/fx-bus/fx-bus.component.html
@@ -4,4 +4,10 @@
 <sui-prepost [channel]="c.channel" />
 <sui-fader-level [channel]="c.channel" />
 <sui-transition [channel]="c.channel" />
+<sui-input
+  label="Channel Name"
+  buttonLabel="Set"
+  [value]="c.channel.name$ | async"
+  (valueChange)="c.channel.setName($event)"
+/>
 }
