--- a/packages/testbed/src/app/pages/master-bus/master-bus.component.html
+++ b/packages/testbed/src/app/pages/master-bus/master-bus.component.html
@@ -9,4 +9,13 @@
 <sui-transition [channel]="c.channel" />
 @if (isDelayable(c.channel)) {
 <sui-delay [channel]="c.channel" [maxValue]="c.delayMax || 250" />
-} }
+}
+
+<sui-input
+  label="Channel Name"
+  buttonLabel="Set"
+  [value]="c.channel.name$ | async"
+  (valueChange)="c.channel.setName($event)"
+/>
+
+}
