refactor(testbed): remove `ngClass` and migrate to `[class]`

--- a/packages/testbed/src/app/ui/prepost/prepost.component.html
+++ b/packages/testbed/src/app/ui/prepost/prepost.component.html
@@ -8,7 +8,7 @@
 >
   Toggle PRE/POST
 </sui-mixer-button>
-<span class="badge ms-2" [ngClass]="{ 'badge-success': post, 'badge-secondary': !post }">
+<span class="badge ms-2" [class]="{ 'badge-success': post, 'badge-secondary': !post }">
   {{ post ? 'POST' : 'PRE' }}
 </span>
 }
