--- a/packages/testbed/src/app/ui/vu-meter/vu-meter.component.html
+++ b/packages/testbed/src/app/ui/vu-meter/vu-meter.component.html
@@ -1,4 +1,4 @@
-<div class="meter" [ngClass]="mode()">
+<div class="meter" [class]="mode()">
   <label>{{ sanitizedLabel() }}</label>
   <div class="bar" [style.width]="barWidth()"></div>
 </div>
