--- a/packages/testbed/src/app/ui/mixer-button/mixer-button.component.html
+++ b/packages/testbed/src/app/ui/mixer-button/mixer-button.component.html
@@ -1,3 +1,3 @@
-<button [ngClass]="ngClassDefinition" (click)="press.emit()">
+<button [class]="classDefinition()" (click)="press.emit()">
   <ng-content></ng-content>
 </button>
