--- a/packages/testbed/src/app/ui/transition-controls/transition-controls.html
+++ b/packages/testbed/src/app/ui/transition-controls/transition-controls.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="fade()" class="row">
+<form (submit)="fade()" class="row">
   <div class="col">
     <label>Fade to</label>
   </div>
@@ -6,29 +6,25 @@
   <div class="col">
     <input
       type="range"
-      min="0"
-      max="1"
       step="0.00000000001"
-      formControlName="targetValue"
+      [field]="form.targetValue"
       title="Target value"
     />
   </div>
-  <div class="col">{{ targetValueDB }} dB</div>
+  <div class="col">{{ targetValueDB() }} dB</div>
 
   <div class="col">
     <input
       type="number"
-      min="100"
-      max="30000"
       step="100"
       class="form-control"
-      formControlName="fadeTime"
+      [field]="form.fadeTime"
       title="Fade time"
     />
   </div>
 
   <div class="col">
-    <select formControlName="easing" class="form-select" title="Easing">
+    <select (change)="setEasing($event)" class="form-select" title="Easing">
       @for (o of easingOptions; track o) {
       <option [value]="o.value">{{ o.label }}</option>
       }
