chore: upgrade nx to 22.5.1 and Angular to 21.1.5

--- a/packages/testbed/src/app/ui/transition-controls/transition-controls.html
+++ b/packages/testbed/src/app/ui/transition-controls/transition-controls.html
@@ -7,7 +7,7 @@
     <input
       type="range"
       step="0.00000000001"
-      [field]="form.targetValue"
+      [formField]="form.targetValue"
       title="Target value"
     />
   </div>
@@ -18,7 +18,7 @@
       type="number"
       step="100"
       class="form-control"
-      [field]="form.fadeTime"
+      [formField]="form.fadeTime"
       title="Fade time"
     />
   </div>
